hoan thanh chuc nang dang ký de tai

--- a/src/app/student/login-thesistrack/login-thesistrack.component.html
+++ b/src/app/student/login-thesistrack/login-thesistrack.component.html
@@ -1,8 +1,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/c9f5871d83.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all">
+    <script defer src="https://kit.fontawesome.com/c9f5871d83.js" crossorigin="anonymous"></script>
 </head>
+
 
 <body>
     <div class="login">
@@ -33,6 +35,7 @@
                 formControlName="password"
                 placeholder="Nhập mật khẩu" class="input" >
             </div>
+            
             <div class="box6">
                 <a href="#"> Quên mật khẩu</a>
             </div>
