--- a/src/app/student/login-thesistrack/login-thesistrack.component.html
+++ b/src/app/student/login-thesistrack/login-thesistrack.component.html
@@ -13,8 +13,8 @@
                 <img src="../../assets/imgs/logoCICT.png" alt="Logo">
             </div>
             <div class="box1">
-                <h2> HỆ THỐNG QUẢN LÝ LỊCH</h2>
-                <h2>BÁO CÁO LUẬN VĂN TÔT NGHIỆP</h2>
+                <h2> HỆ THỐNG THỰC HIỆN</h2>
+                <h2>LUẬN VĂN TỐT NGHIỆP</h2>
             </div>
             <div class="box2">
                 <i class="fa-brands fa-facebook-f"></i>
